kernel/evdev: Expose headers to userland.

--- a/include/Makefile
+++ b/include/Makefile
@@ -175,6 +175,12 @@ copies:		mtree_setup
 	cd ${.CURDIR}/../sys/dev/acpica; \
 		${INSTALL} -C -o ${BINOWN} -g ${BINGRP} -m 444 acpiio.h \
 		${DESTDIR}/usr/include/dev/acpica
+	cd ${.CURDIR}/../sys/dev/misc/evdev; \
+		${INSTALL} -C -o ${BINOWN} -g ${BINGRP} -m 444 input.h \
+		${DESTDIR}/usr/include/dev/misc/evdev
+	cd ${.CURDIR}/../sys/dev/misc/evdev; \
+		${INSTALL} -C -o ${BINOWN} -g ${BINGRP} -m 444 input-event-codes.h \
+		${DESTDIR}/usr/include/dev/misc/evdev
 .if exists(${.CURDIR}/../sys/cpu/${MACHINE_ARCH}/include)
 	cd ${.CURDIR}/../sys/cpu/${MACHINE_ARCH}/include; \
 		${INSTALL} -C -o ${BINOWN} -g ${BINGRP} -m 444 *.h \
