--- a/test/testcases/posixipc/create_excl_existing_sem/Makefile
+++ b/test/testcases/posixipc/create_excl_existing_sem/Makefile
@@ -1,6 +1,6 @@
 PROG=	create_excl_existing_sem
 SRCS=	create_excl_existing_sem.c common.c
-NO_MAN=
+NOMAN=
 LDADD=  -lpthread
 
 CFLAGS= -I ${.CURDIR}/../common
