--- a/test/testcases/posixipc/timedwait_unlocked/Makefile
+++ b/test/testcases/posixipc/timedwait_unlocked/Makefile
@@ -1,6 +1,6 @@
 PROG=	timedwait_unlocked
 SRCS=	timedwait_unlocked.c common.c
-NO_MAN=
+NOMAN=
 LDADD=  -lpthread
 
 CFLAGS= -I ${.CURDIR}/../common
