--- a/usr.sbin/cpucontrol/Makefile
+++ b/usr.sbin/cpucontrol/Makefile
@@ -1,9 +1,9 @@
-# $FreeBSD: release/10.0.0/usr.sbin/cpucontrol/Makefile 242159 2012-10-26 20:25:05Z eadler $
+# $FreeBSD$
 
 PROG=	cpucontrol
 MAN=	cpucontrol.8
-SRCS=	cpucontrol.c intel.c amd.c via.c
+SRCS=	cpucontrol.c intel.c amd.c amd10h.c via.c
 
-NO_STRICT_ALIASING=
+NO_WCAST_ALIGN=
 
 .include <bsd.prog.mk>
