--- a/gnu/usr.bin/Makefile.cco
+++ b/gnu/usr.bin/Makefile.cco
@@ -1,7 +1,7 @@
 # DragonFly maintains two sets of compilers.
 # In order to keep man page generation simple when the primary compiler
-# changes, this makefile will direct the makefile that included it how
-# to name the man pages and if it should hardlink a generic man page to it.
+# changes, this makefile will direct the makefile that included it to
+# hardlink a generic man pages for the selected primary compiler.
 # The same approach is used for the two sets of binutils
 
 CC_PRIMARY=	gcc50
@@ -10,6 +10,5 @@ CC_BACKUP=	gcc47
 .if defined(COMPVERSION)
 .if (${COMPVERSION} == ${CC_PRIMARY})
 IS_PRIMARY=	1
-MANPAGEVER=	50
 .endif
 .endif
