world: Mark utilities that use out of bounds copies.

--- a/usr.bin/tftp/Makefile
+++ b/usr.bin/tftp/Makefile
@@ -5,5 +5,6 @@ SRCS=	main.c tftp.c tftpsubs.c
 DPADD=	${LIBEDIT} ${LIBNCURSES}
 LDADD=	-lprivate_edit -lprivate_ncurses
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+NO_WARRAY_BOUNDS=
 
 .include <bsd.prog.mk>
