bus_dma.9: Add a few lines about bus_dmamap_load_ccb().
While doing, add a comment to the function.

--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -262,6 +262,7 @@ MLINKS+=bus_dma.9 busdma.9 \
 	bus_dma.9 bus_dmamap_create.9 \
 	bus_dma.9 bus_dmamap_destroy.9 \
 	bus_dma.9 bus_dmamap_load.9 \
+	bus_dma.9 bus_dmamap_load_ccb.9 \
 	bus_dma.9 bus_dmamap_load_mbuf.9 \
 	bus_dma.9 bus_dmamap_load_mbuf_defrag.9 \
 	bus_dma.9 bus_dmamap_load_mbuf_segment.9 \
