rpc: Add support for NO_WCAST_FUNCTION_TYPE make variables.
It is unfortunate that <rpc/xdr.h> has the "bool_t xdr_void(void);"
without the XDR* parameter even if it is unused. Since we do not want to
change public symbol interface, suppressing the warning is a better way.

While there, add suppression to acpiexec/inetd for function cast too.

--- a/usr.sbin/acpi/acpiexec/Makefile
+++ b/usr.sbin/acpi/acpiexec/Makefile
@@ -225,4 +225,7 @@ CFLAGS+= \
 LDADD+=	-lpthread
 DPADD+=	${LIBPTHREAD}
 
+# XXX issue with ACPI_OSD_EXEC_CALLBACK
+NO_WCAST_FUNCTION_TYPE=
+
 .include <bsd.prog.mk>
