--- a/usr.sbin/rpcbind/Makefile
+++ b/usr.sbin/rpcbind/Makefile
@@ -8,6 +8,7 @@ SRCS=	check_bound.c rpcb_stat.c rpcb_svc_4.c rpcbind.c pmap_svc.c \
 	rpcb_svc.c rpcb_svc_com.c security.c warmstart.c util.c
 WARNS?=	3
 NO_STRICT_ALIASING=
+NO_WCAST_FUNCTION_TYPE=
 
 CFLAGS+= -DPORTMAP -DLIBWRAP
 
