--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -376,9 +376,7 @@ MLINKS+=callout.9 callout_active.9 \
 	callout.9 callout_reset.9 \
 	callout.9 callout_stop.9 \
 	callout.9 callout_stop_async.9 \
-	callout.9 callout_stop_sync.9 \
-	callout.9 timeout.9 \
-	callout.9 untimeout.9
+	callout.9 callout_stop_sync.9
 MLINKS+=condvar.9 cv_broadcast.9 \
 	condvar.9 cv_broadcastpri.9 \
 	condvar.9 cv_destroy.9 \
