--- a/share/initrd/bin/Makefile
+++ b/share/initrd/bin/Makefile
@@ -40,7 +40,8 @@ CRUNCH_PROGS_bin=	\
 	test
 
 CRUNCH_LIBS+= -lcrypt -lprivate_edit -lkvm -ll -lmd -lprivate_ncurses -lutil
-CRUNCH_BUILDTOOLS+= bin/sh
+# No longer needed if bin/sh uses pregenerated/ headers.
+#CRUNCH_BUILDTOOLS+= bin/sh bin/sh/mknodes bin/sh/mksyntax
 
 # Additional options for specific programs
 CRUNCH_ALIAS_test= [
