LIBPRIV: Make sure sh(1) only depends on lib.so.
Avoid possible cases of failed installworld target.

--- a/bin/sh/Makefile
+++ b/bin/sh/Makefile
@@ -31,8 +31,7 @@ CFLAGS+= -DNO_HISTORY
 # LIBEDIT is not needed here
 .else
 DPADD= ${LIBEDIT} ${LIBNCURSES}
-LDADD= -lprivate_edit -lprivate_ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+LDADD= ${LIBEDIT} ${LIBNCURSES}
 .endif
 
 
