kernel: port if_cdce
While here also update it to FreeBSD's

--- a/sys/bus/u4b/net/Makefile
+++ b/sys/bus/u4b/net/Makefile
@@ -1,6 +1,6 @@
 #
-# XXX MISSING: cdce rue smsc uhso usie
+# XXX MISSING: rue smsc uhso usie
 
-SUBDIR=	aue axe axge cue ipheth kue mos udav uether urndis
+SUBDIR=	aue axe axge cdce cue ipheth kue mos udav uether urndis
 
 .include <bsd.subdir.mk>
