--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3371,6 +3371,7 @@ TO_REMOVE+=/usr/share/man/man8/rshd.8.gz
 TO_REMOVE+=/usr/share/calendar/de_AT.ISO_8859-15
 TO_REMOVE+=/usr/share/man/man9/timeout.9.gz
 TO_REMOVE+=/usr/share/man/man9/untimeout.9.gz
+TO_REMOVE+=/usr/include/machine/apm_bios.h
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
