kernel/u4b: Some additional work for the recent cdce(4) addition.
* Add a manual page from FreeBSD.

* Add to LINT64.

* Adjust devd(8) configuration so that cdce.ko automatically loads upon
  plugging.

--- a/etc/devd/usb.conf
+++ b/etc/devd/usb.conf
@@ -94,6 +94,14 @@ nomatch 32 {
 nomatch 32 {
 	match "bus" "uhub[0-9]+";
 	match "mode" "host";
+	match "vendor" "0x0402";
+	match "product" "0x5632";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
 	match "vendor" "0x0403";
 	match "product" "(0x6001|0x6004|0x6010|0x6011|0x8372|0x9e90|0xa6d0|0xcc48|0xcc49|0xcc4a|0xd678|0xe6c8|0xe888|0xe889|0xe88a|0xe88b|0xe88c|0xee18|0xf608|0xf60b|0xf850|0xfa00|0xfa01|0xfa02|0xfa03|0xfa04|0xfc08|0xfc09|0xfc0b|0xfc0c|0xfc0d|0xfc82)";
 	action "kldload -n uftdi";
@@ -318,6 +326,14 @@ nomatch 32 {
 nomatch 32 {
 	match "bus" "uhub[0-9]+";
 	match "mode" "host";
+	match "vendor" "0x049f";
+	match "product" "0x505a";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
 	match "vendor" "0x04a4";
 	match "product" "0x0014";
 	action "kldload -n uipaq";
@@ -441,6 +457,14 @@ nomatch 32 {
 	match "vendor" "0x04da";
 	match "product" "0x3900";
 	action "kldload -n uplcom";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x04dd";
+	match "product" "(0x8004|0x8005|0x8006|0x8007|0x9031)";
+	action "kldload -n if_cdce";
 };
 
 nomatch 32 {
@@ -649,6 +673,14 @@ nomatch 32 {
 	match "vendor" "0x050d";
 	match "product" "(0x935a|0x935b)";
 	action "kldload -n if_run";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x0525";
+	match "product" "0xa4a2";
+	action "kldload -n if_cdce";
 };
 
 nomatch 32 {
@@ -943,7 +975,23 @@ nomatch 32 {
 	match "bus" "uhub[0-9]+";
 	match "mode" "host";
 	match "vendor" "0x067b";
-	match "product" "(0x04bb|0x0609|0x0611|0x0612|0x1234|0x206a|0x2303|0x331a|0xaaa0|0xaaa2)";
+	match "product" "(0x04bb|0x0609|0x0611|0x0612|0x1234|0x206a|0x2303)";
+	action "kldload -n uplcom";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x067b";
+	match "product" "0x2501";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x067b";
+	match "product" "(0x331a|0xaaa0|0xaaa2)";
 	action "kldload -n uplcom";
 };
 
@@ -1678,6 +1726,14 @@ nomatch 32 {
 nomatch 32 {
 	match "bus" "uhub[0-9]+";
 	match "mode" "host";
+	match "vendor" "0x0bb2";
+	match "product" "0x6098";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
 	match "vendor" "0x0bb4";
 	match "product" "(0x00ce|0x00cf|0x00cf|0x0a01|0x0a02|0x0a03|0x0a04|0x0a05|0x0a06|0x0a07|0x0a08|0x0a09|0x0a0a|0x0a0b|0x0a0c|0x0a0d|0x0a0e|0x0a0f|0x0a10|0x0a11|0x0a12|0x0a13|0x0a14|0x0a15|0x0a16|0x0a17|0x0a18|0x0a19|0x0a1a|0x0a1b|0x0a1c|0x0a1d|0x0a1e|0x0a1f|0x0a20|0x0a21|0x0a22|0x0a23|0x0a24|0x0a25|0x0a26|0x0a27|0x0a28|0x0a29|0x0a2a|0x0a2b|0x0a2c|0x0a2d|0x0a2e|0x0a2f|0x0a30|0x0a31|0x0a32|0x0a33|0x0a34|0x0a35|0x0a36|0x0a37|0x0a38|0x0a39|0x0a3a|0x0a3b|0x0a3c|0x0a3d|0x0a3e|0x0a3f|0x0a40|0x0a41|0x0a42|0x0a43|0x0a44|0x0a45|0x0a46|0x0a47|0x0a48|0x0a49|0x0a4a|0x0a4b|0x0a4c|0x0a4d|0x0a4e|0x0a4f|0x0a50|0x0a51|0x0a52|0x0a53|0x0a54|0x0a55|0x0a56|0x0a57|0x0a58|0x0a59|0x0a5a|0x0a5b|0x0a5c|0x0a5d|0x0a5e|0x0a5f|0x0a60|0x0a61|0x0a62|0x0a63|0x0a64|0x0a65|0x0a66|0x0a67|0x0a68|0x0a69|0x0a6a|0x0a6b|0x0a6c|0x0a6d|0x0a6e|0x0a6f|0x0a70|0x0a71|0x0a72|0x0a73|0x0a74|0x0a75|0x0a76|0x0a77|0x0a78|0x0a79|0x0a7a|0x0a7b|0x0a7c|0x0a7d|0x0a7e|0x0a7f|0x0a80|0x0a81|0x0a82|0x0a83|0x0a84|0x0a85|0x0a86|0x0a87|0x0a88|0x0a89|0x0a8a|0x0a8b|0x0a8c|0x0a8d|0x0a8e|0x0a8f|0x0a90|0x0a91|0x0a92|0x0a93|0x0a94|0x0a95|0x0a96|0x0a97|0x0a98|0x0a99|0x0a9a|0x0a9b|0x0a9c|0x0a9d|0x0a9e|0x0a9f|0x0bce)";
 	action "kldload -n uipaq";
@@ -1913,6 +1969,14 @@ nomatch 32 {
 	match "vendor" "0x0e67";
 	match "product" "0x0002";
 	action "kldload -n uvisor";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x0e7e";
+	match "product" "0x1001";
+	action "kldload -n if_cdce";
 };
 
 nomatch 32 {
@@ -2311,7 +2375,23 @@ nomatch 32 {
 	match "bus" "uhub[0-9]+";
 	match "mode" "host";
 	match "vendor" "0x12d1";
-	match "product" "(0x1001|0x1003|0x1004|0x1401|0x1402|0x1403|0x1404|0x1405|0x1406|0x1407|0x1408|0x1409|0x140a|0x140b|0x140c|0x140d|0x140e|0x140f|0x1410|0x1411|0x1412|0x1413|0x1414|0x1415|0x1416|0x1417|0x1418|0x1419|0x141a|0x141b|0x141c|0x141d|0x141e|0x141f|0x1420|0x1421|0x1422|0x1423|0x1424|0x1425|0x1426|0x1427|0x1428|0x1429|0x142a|0x142b|0x142c|0x142d|0x142e|0x142f|0x1430|0x1431|0x1432|0x1433|0x1434|0x1435|0x1436|0x1437|0x1438|0x1439|0x143a|0x143b|0x143c|0x143d|0x143e|0x143f|0x1446|0x1465|0x14ac|0x1520|0x1c05|0x1c0b)";
+	match "product" "(0x1001|0x1003|0x1004|0x1401|0x1402|0x1403|0x1404|0x1405|0x1406|0x1407|0x1408|0x1409|0x140a|0x140b|0x140c|0x140d|0x140e|0x140f|0x1410|0x1411|0x1412|0x1413|0x1414|0x1415|0x1416|0x1417|0x1418|0x1419|0x141a|0x141b|0x141c|0x141d|0x141e|0x141f|0x1420|0x1421|0x1422|0x1423|0x1424|0x1425|0x1426|0x1427|0x1428|0x1429|0x142a|0x142b|0x142c|0x142d|0x142e|0x142f|0x1430|0x1431|0x1432|0x1433|0x1434|0x1435|0x1436|0x1437|0x1438|0x1439|0x143a|0x143b|0x143c|0x143d|0x143e|0x143f|0x1446|0x1465|0x14ac|0x1520)";
+	action "kldload -n u3g";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x12d1";
+	match "product" "0x155b";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x12d1";
+	match "product" "(0x1c05|0x1c0b)";
 	action "kldload -n u3g";
 };
 
@@ -3118,6 +3198,14 @@ nomatch 32 {
 nomatch 32 {
 	match "bus" "uhub[0-9]+";
 	match "mode" "host";
+	match "vendor" "0x22b8";
+	match "product" "(0x600c|0x6027)";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
 	match "vendor" "0x2478";
 	match "product" "0x2008";
 	action "kldload -n uplcom";
@@ -3397,6 +3485,46 @@ nomatch 32 {
 
 nomatch 32 {
 	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x12d1";
+	match "intclass" "0xff";
+	match "intsubclass" "0x02";
+	match "intprotocol" "0x16";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x12d1";
+	match "intclass" "0xff";
+	match "intsubclass" "0x02";
+	match "intprotocol" "0x46";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x12d1";
+	match "intclass" "0xff";
+	match "intsubclass" "0x02";
+	match "intprotocol" "0x76";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "host";
+	match "vendor" "0x12d1";
+	match "intclass" "0xff";
+	match "intsubclass" "0x03";
+	match "intprotocol" "0x16";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
 	match "mode" "(host|device)";
 	match "intclass" "0x02";
 	match "intsubclass" "0x02";
@@ -3503,6 +3631,30 @@ nomatch 32 {
 
 nomatch 32 {
 	match "bus" "uhub[0-9]+";
+	match "mode" "(host|device)";
+	match "intclass" "0x02";
+	match "intsubclass" "0x06";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "(host|device)";
+	match "intclass" "0x02";
+	match "intsubclass" "0x0a";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
+	match "mode" "(host|device)";
+	match "intclass" "0x02";
+	match "intsubclass" "0x0d";
+	action "kldload -n if_cdce";
+};
+
+nomatch 32 {
+	match "bus" "uhub[0-9]+";
 	match "mode" "host";
 	match "intclass" "0x02";
 	match "intsubclass" "0x88";
@@ -3523,5 +3675,5 @@ nomatch 32 {
 	action "kldload -n umass";
 };
 
-# 1670 USB entries processed
+# 1691 USB entries processed
 
