--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -59,6 +59,7 @@ MAN=	aac.4 \
 	carp.4 \
 	ccd.4 \
 	cd.4 \
+	cdce.4 \
 	ch.4 \
 	ciss.4 \
 	clockmod.4 \
@@ -428,6 +429,7 @@ MLINKS+=bktr.4 brooktree.4
 MLINKS+=bnx.4 if_bnx.4
 MLINKS+=bridge.4 if_bridge.4
 MLINKS+=bwn.4 if_bwn.4
+MLINKS+=cdce.4 if_cdce.4
 MLINKS+=crypto.4 cryptodev.4
 MLINKS+=cue.4 if_cue.4
 MLINKS+=dc.4 if_dc.4
