{read,write}.2: A bit more cleanup. Also add ext*() MLINKS.

--- a/lib/libc/sys/Makefile.inc
+++ b/lib/libc/sys/Makefile.inc
@@ -159,7 +159,8 @@ MLINKS+=open.2 openat.2
 MLINKS+=pathconf.2 fpathconf.2 pathconf.2 lpathconf.2
 MLINKS+=pipe.2 pipe2.2
 MLINKS+=poll.2 ppoll.2
-MLINKS+=read.2 pread.2 read.2 preadv.2 read.2 readv.2
+MLINKS+=read.2 extpread.2 read.2 expreadv.2 \
+	read.2 pread.2 read.2 preadv.2 read.2 readv.2
 MLINKS+=readlink.2 readlinkat.2
 MLINKS+=recv.2 recvfrom.2 recv.2 recvmsg.2
 MLINKS+=rename.2 renameat.2
@@ -211,5 +212,6 @@ MLINKS+=varsym.2 varsym_get.2 \
 MLINKS+=vmm.2 vmm_guest_ctl.2 \
 	vmm.2 vmm_guest_sync_addr.2
 MLINKS+=wait.2 wait3.2 wait.2 wait4.2 wait.2 waitpid.2
-MLINKS+=write.2 pwrite.2 write.2 pwritev.2 write.2 writev.2
+MLINKS+=write.2 extpwrite.2 write.2 extpwritev.2 \
+	write.2 pwrite.2 write.2 pwritev.2 write.2 writev.2
 .endif
