--- a/etc/periodic/weekly/Makefile
+++ b/etc/periodic/weekly/Makefile
@@ -1,8 +1,6 @@
 # $FreeBSD: src/etc/periodic/weekly/Makefile,v 1.4.2.3 2002/07/18 12:36:07 ru Exp $
-# $DragonFly: src/etc/periodic/weekly/Makefile,v 1.4 2006/01/15 11:42:50 swildner Exp $
 
-FILES=	120.clean-kvmdb \
-	310.locate \
+FILES=	310.locate \
 	320.whatis \
 	330.catman \
 	340.noid \
