periodic: Sync with FreeBSD current
* Sync periodic scripts, periodic.conf, periodic.conf.5 with FreeBSD
* The "{daily,weekly,monthly}_status_security_<var>_enable" variables are
  changed to be "security_status_<var>_enable" and
  "security_status_<var>_period" (daily, weekly, monthly).
* Keep DFly-specific settings (e.g., HAMMER and HAMMER2 related)
* Ignore the FreeBSD-specific things, e.g., ZFS, GEOM

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3376,6 +3376,7 @@ TO_REMOVE+=/usr/share/man/man2/expreadv.2.gz
 TO_REMOVE+=/etc/periodic/monthly/300.statistics
 TO_REMOVE+=/etc/periodic/weekly/120.clean-kvmdb
 TO_REMOVE+=/etc/periodic/daily/470.status-named
+TO_REMOVE+=/etc/periodic/daily/430.status-rwho
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
