--- a/etc/periodic/monthly/Makefile
+++ b/etc/periodic/monthly/Makefile
@@ -1,6 +1,7 @@
 # $FreeBSD: src/etc/periodic/monthly/Makefile,v 1.2.2.1 2002/07/18 12:36:07 ru Exp $
 
 FILES=	200.accounting \
+	450.status-security \
 	999.local
 
 .include <bsd.prog.mk>
