--- a/usr.bin/locate/locate/locate.rc
+++ b/usr.bin/locate/locate/locate.rc
@@ -3,17 +3,11 @@
 #
 # $FreeBSD: head/usr.bin/locate/locate/locate.rc 290742 2015-11-13 06:16:12Z des $
 
-#
-# All commented values are the defaults
-#
 # temp directory
 #TMPDIR="/tmp"
 
 # the actual database
 #FCODES="/var/db/locate.database"
-
-# directories to be put in the database
-#SEARCHPATHS="/"
 
 # paths unwanted in output
 #PRUNEPATHS="/tmp /usr/tmp /var/tmp"
@@ -31,3 +25,14 @@
 # be careful if you add 'nfs' or other network file system types or file
 # systems that generally reside on slow or removable devices like cd9660
 #FILESYSTEMS="ufs hammer hammer2"
+
+# directories to be searched to create the database
+#
+# default to be all mount points with the above allowed filesystems, thus
+# allowing the exclusion of the root (/) filesystem while other mounted
+# and allowed filesystems can still be indexed.
+#
+#SEARCHPATHS="/"
+
+# the find program and its options
+#FIND="find -x"
