dialog(1): Use ${} uniformly.

--- a/gnu/usr.bin/dialog/Makefile
+++ b/gnu/usr.bin/dialog/Makefile
@@ -2,7 +2,7 @@
 
 PROG=	dialog
 
-DPADD=	$(LIBDIALOG) ${LIBM} $(LIBNCURSESW)
+DPADD=	${LIBDIALOG} ${LIBM} ${LIBNCURSESW}
 LDADD=	-ldialog -lm -lprivate_ncursesw
 
 CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
