rc.d: Add ipfw3 rc script
To use ipfw3, add 'ipfw3_enable=YES' to /etc/rc.conf .  By default, only
the 'ipfw3' and 'ipfw3_basic' modules will be loaded.  If you need more
ipfw3 modules, set them with 'ipfw3_modules="<modules> ..."' in
/etc/rc.conf .  See also the rc.conf(5) man page.

This ipfw3 rc script is largely based on the ipfw script.

The /etc/ipfw3.rules (a shell script) should be present to setup the
firewall rules, otherwise the default setup will block all incoming
connections, including your current connection!

NOTE:
I wrote this script for use in my VPS last year, but switched to
PF later, so more tests and improvements (e.g., flush tables on stop)
to this script are needed.

Reviewed-by: swildner

--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -67,6 +67,10 @@ firewall_open_udp_ports="53"
 firewall_quiet="NO"		# Set to YES to suppress rule display
 firewall_logging="NO"		# Set to YES to enable events logging
 firewall_flags=""		# Flags passed to ipfw when type is a file
+ipfw3_enable="NO"		# Set to YES to enable ipfw3(8) firewall
+ipfw3_program="/sbin/ipfw3"	# where the ipfw3 program lives
+ipfw3_script="/etc/ipfw3.rules"	# Script to run to set up the firewall rules
+ipfw3_modules="ipfw3 ipfw3_basic"	# IPFW3 modules to be loaded
 ip_portrange_first="NO"		# Set first dynamically allocated port
 ip_portrange_last="NO"		# Set last dynamically allocated port
 ipsec_enable="NO"		# Set to YES to run setkey on ipsec_file
