mkinitrd(8): determine the initrd size from the contents size
* Calculate the contents size to determine the required initrd size.

  The used initrd size is determined from the total contents size, rounded up
  to align with 1 MiB, added additional 1 MiB.

  The calculated initrd size is 12 MiB at the moment, so we have 3 MiB
  more usable memory now (compared to the fixed 15 MiB before).

* Add options "-s" to specify the required initrd size as before.  But a check
  against the above determined required initrd size is performance to avoid the
  out-of-space error, resulting in a broken initrd image.

* Add option "-S" to constrain the allowed maximum initrd size, because a too
  big initrd image will also lead to boot failure, due to the boot loader
  limitation.

* Some minor cleanups and improvements, better error handle and messages.

* Update the mkinitrd.conf and man page accordingly.

Reviewed-by: zrj

--- a/etc/defaults/mkinitrd.conf
+++ b/etc/defaults/mkinitrd.conf
@@ -2,6 +2,6 @@
 #
 BOOT_DIR="/boot"
 CONTENT_DIRS="/usr/share/initrd"
-INITRD_DIRS="bin boot dev etc mnt proc root sbin tmp var var/empty var/db new_root"
-INITRD_SIZE="15m"
+INITRD_DIRS="bin dev etc sbin tmp var new_root"
+INITRD_SIZE_MAX="15"  # [MiB]
 TMP_DIR="/tmp"
