mkinitrd(8): improve the man page and styles
Suggested-by: swildner

--- a/etc/defaults/mkinitrd.conf
+++ b/etc/defaults/mkinitrd.conf
@@ -3,5 +3,5 @@
 BOOT_DIR="/boot"
 CONTENT_DIRS="/usr/share/initrd"
 INITRD_DIRS="bin dev etc sbin tmp var new_root"
-INITRD_SIZE_MAX="15"  # [MiB]
+INITRD_SIZE_MAX="15"  # MB
 TMP_DIR="/tmp"
