libcompat: Remove the old and unused insque() and remque() functions.
We have a conforming implementation of those two functions in libc, so
nothing was taking the ones from libcompat. However, libcompat's
outdated manual pages were shadowing the good ones from libc.

Reported-by: zrj

--- a/lib/libcompat/Makefile
+++ b/lib/libcompat/Makefile
@@ -16,11 +16,9 @@ MLINKS+=stty.3 gtty.3
 
 # compat 4.3 sources
 SRCS+=	re_comp.c rexec.c
-SRCS+=	insque.c remque.c
 
-MAN+=	4.3/insque.3 4.3/re_comp.3 4.3/rexec.3
+MAN+=	4.3/re_comp.3 4.3/rexec.3
 
-MLINKS+=insque.3 remque.3
 MLINKS+=re_comp.3 re_exec.3
 
 # compat 4.4 sources
