ncurses: Allow for easier bootstrap of libtic.
Mainly as backwards compat for gcc80.

Cherry-pick to 5.2

--- a/lib/libncurses/libtic/Makefile
+++ b/lib/libncurses/libtic/Makefile
@@ -1,6 +1,9 @@
 # Build special version of ncurses for tic(1)
 LIB=	tic
 
+# keep at low warns, hostlib
+WARNS=	1
+
 ZTIC=	yes
 CFLAGS+=	-DDRAGONFLY_NATIVE
 
